--- a/rama/index.html
+++ b/rama/index.html
@@ -14,13 +14,36 @@
       display: inline-block;
       width: 250px;
     }
+    h3 {
+      margin-bottom: 4px;
+    }
+    p {
+      margin-top: 4px;
+    }
   </style>
   <body>
-<h2>Ramazan 1442</h2>
+<h2>Ramazan 30 Gün</h2>
 
 <p>Evde geçireceğimiz bu ikinci Ramazan mevsimini 
-  yine Kuran kelimeleri ile süsleyelim.</p>
+  yine Kuran kelimeleri ile süsleyelim. Mail grubuna katılın, 
+  Ramazan boyunca size her gün birkaç ayet hatırlatalım.
+</p>
+<p>12 Nisan'da Ramazan'a iki saat kala başlıyoruz inşaallah.</p>
 
+<h3>Paylaşalım lutfen:</h3>
+<p><a 
+href="https://groups.google.com/g/rama30">https://groups.google.com/g/rama30</a> 
+<br>Tanıdıklarımın katılımından çok, tanımadığım kişilere
+(özellikle gençlere) duyurmanızı umuyorum.
+</p>
+
+<h3>Amacımız</h3>
+<p>Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.</p>
+
+<h3><q>... ama Arapça okuyamam</q></h3>
+<p>En azından, Kuran kelimelerine aşina olursunuz.</p>
+
+<h3>Konular</h3>
 <div>
   <ol>Bismillah her hayrın başıdır</ol>
   <ol>1. Karanlıklardan Nûra</ol>
