--- a/rama/index.html
+++ b/rama/index.html
@@ -33,15 +33,14 @@
 <h3>Paylaşalım lutfen:</h3>
 <p><a 
 href="https://groups.google.com/g/rama30">https://groups.google.com/g/rama30</a> 
-<br>Tanıdıklarımın katılımından çok, tanımadığım kişilere
-(özellikle gençlere) duyurmanızı umuyorum.
 </p>
 
 <h3>Amacımız</h3>
-<p>Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.</p>
-
-<h3><q>... ama Arapça okuyamam</q></h3>
-<p>En azından, Kuran kelimelerine aşina olursunuz.</p>
+<p>Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.
+Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
+</p>
+<p><b><q>... ama Arapça okuyamam</q></b><br>
+En azından, Kuran kelimelerine aşina olursunuz.</p>
 
 <h3>Konular</h3>
 <div>
@@ -80,6 +79,9 @@ href="https://groups.google.com/g/rama30">https://groups.google.com/g/rama30</a>
   <ol>30. Dualarının sonu</ol>
 </div>
 
+<p>Bu konular önceki Ramazan'da blog olarak yayınlanmıştı. 
+Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
+</p>
 <!-- <a target="video"
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
 Videolar burada</a> -->
