--- a/rama/bismillah.html
+++ b/rama/bismillah.html
@@ -7,19 +7,19 @@
     <meta name="description" content="Words from Quran" />
     <link rel="stylesheet" href="rama.css" media="all">
     <link rel="icon" href="/Kuran/image/icon.png">
-    <title>Ramazan 1442</title>
+    <title>Her hayrın başı</title>
   </head>
 
   <body>
-<h2>Her hayrın başı &emsp;<button class=goBack>◀</button></h2>
+<h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-1442 hicri yılının Ramazan ayı bu gece (13 Nisan 2021) başlıyor, mübarek olsun, bereketi ile gelsin... "Bismillah her hayrın başıdır" diyerek her gün kısa bir ders yapalım inşaallah... ilk konu <b>bismillah</b>, sonu da <b>elhamdulillah </b>olsun.
+1442 hicri yılının Ramazan ayı yarın (13 Nisan 2021) başlıyor, mübarek olsun, bereketi ile gelsin... "Bismillah her hayrın başıdır" diyerek her gün kısa bir ders yapalım inşaallah... ilk konu <b>bismillah</b>, sonu da <b>elhamdulillah </b>olsun.
 <br><br>
-<table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;"><tbody>
-<tr><td style="text-align: center;"><a href="https://1.bp.blogspot.com/-QYUKo6IAfFs/XqEg-Ym7MVI/AAAAAAAAbFs/1wKhUb14vc0tFrFgS9dVORlKTViQwAVcgCEwYBhgL/s1600/KemalBatanay_010-696x251.jpg" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" data-original-height="251" data-original-width="696" height="143" src="https://1.bp.blogspot.com/-QYUKo6IAfFs/XqEg-Ym7MVI/AAAAAAAAbFs/1wKhUb14vc0tFrFgS9dVORlKTViQwAVcgCEwYBhgL/s400/KemalBatanay_010-696x251.jpg" width="400" /></a></td></tr>
-<tr><td class="tr-caption" style="text-align: center;">
-bismillahirrahmânirrahîm</td></tr>
-</tbody></table>
+<img data-original-height="251" data-original-width="696"
+src="https://1.bp.blogspot.com/-QYUKo6IAfFs/XqEg-Ym7MVI/AAAAAAAAbFs/1wKhUb14vc0tFrFgS9dVORlKTViQwAVcgCEwYBhgL/s1600/KemalBatanay_010-696x251.jpg" />
+<div class=center>
+  bismillâhirrahmânirrahîm
+</div>   
 <br>
 <b>bismillâh</b> (Allah'ın adı ile) Kuran'da üç yerde geçiyor.<br>
 <br>
@@ -29,17 +29,17 @@ bismillahirrahmânirrahîm</td></tr>
 * en sondaki "i" sesi okunmaz<br>
 <br>
 <h3>1. Yüce Kitabımızın ilk satırı</h3>
-<span style="font-family: georgia, serif;">
-<a name="v=1:1"><b>bismillahirrahmânirrahîm</b></a><br>
-<i>Rahman ve Rahim olan Allah'ın adıyla</i>
+<span class=ayet>
+<a name="v=1:1"><b>bismillâhirrahmânirrahîm</b></a><br>
+<i>Rahmân ve Rahîm olan Allah'ın adıyla</i>
 </span>
-<br>
-<div class="separator" style="clear: both; text-align: left;">
-<a href="https://1.bp.blogspot.com/-hAnXlaOSl5A/XqPfoumOCFI/AAAAAAAAbIE/A7yKLbFgWaMI3aoy8WVuUPiOc-54Rcd9ACLcBGAsYHQ/s1600/besmele%2Btablo.jpg" imageanchor="1" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="649" data-original-width="965" height="269" src="https://1.bp.blogspot.com/-hAnXlaOSl5A/XqPfoumOCFI/AAAAAAAAbIE/A7yKLbFgWaMI3aoy8WVuUPiOc-54Rcd9ACLcBGAsYHQ/s400/besmele%2Btablo.jpg" width="400" /></a></div>
-
+<br><br>
+<img data-original-height="649" data-original-width="965"
+src="https://1.bp.blogspot.com/-hAnXlaOSl5A/XqPfoumOCFI/AAAAAAAAbIE/A7yKLbFgWaMI3aoy8WVuUPiOc-54Rcd9ACLcBGAsYHQ/s1600/besmele%2Btablo.jpg" />
+<br><br>
 <h3>2. Büyük bir nebinin sözü</h3>
-Çok önemli bir işe başlarken besmele ile bize örnek oluyor. Bir asansörün düğmesine basarken, arabanın motorunu çalıştırırken, hep bu sözü söyleyip bu anlamı düşünürüm: Yürüten de O, durduran da O. Gemiyi de, asansörü de, arabayı da, beni de, seni de, evreni de...<br><br>
-<span style="font-family: georgia, serif;">
+Çok önemli bir işe başlarken söylediği besmele ile bize örnek oluyor. Bir asansörün düğmesine basarken, arabanın motorunu çalıştırırken, hep bu sözü söyleyip bu anlamı düşünürüm: Yürüten de O, durduran da O. Gemiyi de, asansörü de, arabayı da, beni de, seni de, evreni de...<br><br>
+<span class=ayet>
 <b><a name="v=11:41&r=smw">bismillâhi mecrâhâ vemursâhâ</a></b><br>
 <i>"Binin ona, gitmesi de durması da Allah'ın adıyladır" dedi</i>
 </span>
@@ -47,20 +47,18 @@ bismillahirrahmânirrahîm</td></tr>
 Gemiye binmenin Allah'a teslimiyet olduğunu anlıyoruz. Evet, Hz. Nûh geminin ve içindekilerinin selâmete ulaşacağından emin, çünkü yaptığı gemiyi tarif eden ve yapımı sırasında gözeten Allah, tüm kainatın sahibi. Selâmet ancak O'na teslim olmakta.<br><br>
 
 <h3>3. Başka bir nebinin mektubu</h3>
-<span style="font-family: georgia, serif;">
-<b><a name="v=27:30&r=smw">veinnehû bismillahirrahmânirrahîm</a></b><br>
-<i>"(Mektup) Süleyman'dandır, bismillahirrahmânirrahîm diyor"</i>
+<span class=ayet>
+<b><a name="v=27:30&r=smw">veinnehû bismillâhirrahmânirrahîm</a></b><br>
+<i>"(Mektup) Süleyman'dandır, bismillâhirrahmânirrahîm diyor"</i>
 </span>
 <br><br>
-Hem melik (kıral), hem nebi. Aynı anda saltanat ve hikmet sahibi. Yıldızlara secde eden bir kavmin melikesine mektup yazıyor. Ayette, melikenin ağzından mektubun ilk satırı okunuyor. Aşağıdaki hat levhasına konu olmuş. Hem ayet yazılı, hem de besmele.
+Hem melik (kral), hem nebi. Aynı anda saltanat ve hikmet sahibi. Yıldızlara secde eden bir kavmin melikesine mektup yazıyor. Ayette, melikenin ağzından mektubun ilk satırı okunuyor. Aşağıdaki hat levhasına konu olmuş. Hem ayet yazılı, hem de besmele. Surenin devamında, bu söz ile hayretler içinde kalan melikenin sonraki teslimiyeti anlatılıyor.
 <br><br>
-<table align="center" cellpadding="0" cellspacing="0" class="tr-caption-container" style="margin-left: auto; margin-right: auto; text-align: center;"><tbody>
-<tr><td style="text-align: center;"><a href="https://1.bp.blogspot.com/-sMcMvTUGnhw/XqEg-VttkVI/AAAAAAAAbFw/MdK5bxklfx4Dgc5GtS2b4sW0jhnp9QtLgCEwYBhgL/s1600/besmele.0.jpg" imageanchor="1" style="margin-left: auto; margin-right: auto;"><img border="0" data-original-height="240" data-original-width="240" height="400" src="https://1.bp.blogspot.com/-sMcMvTUGnhw/XqEg-VttkVI/AAAAAAAAbFw/MdK5bxklfx4Dgc5GtS2b4sW0jhnp9QtLgCEwYBhgL/s400/besmele.0.jpg" width="400" /></a></td></tr>
-<tr><td class="tr-caption" style="text-align: center;">
-<span style="font-size: small;">
-innehû min suleymâne veinnehû bi-smi-llâhi-rrahmâni-rrahîmi
-</span></td></tr>
-</tbody></table>   
+<img data-original-height="240" data-original-width="240" 
+src="https://1.bp.blogspot.com/-sMcMvTUGnhw/XqEg-VttkVI/AAAAAAAAbFw/MdK5bxklfx4Dgc5GtS2b4sW0jhnp9QtLgCEwYBhgL/s1600/besmele.0.jpg" />
+<div class="center small">
+  innehû min suleymâne veinnehû bismillâhirrahmânirrahîm
+</div>   
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
