--- a/rama/index.html
+++ b/rama/index.html
@@ -44,7 +44,7 @@ En azından, Kuran kelimelerine aşina olursunuz.</p>
 
 <h3>Konular</h3>
 <div>
-  <ol>Bismillah her hayrın başıdır</ol>
+  <ol><a href="bismillah.html">Bismillah her hayrın başıdır</a></ol>
   <ol>1. Karanlıklardan Nûra</ol>
   <ol>2. Allah Yeter</ol>
   <ol>3. Mevlanız Allah</ol>
