--- a/rama/index.html
+++ b/rama/index.html
@@ -28,11 +28,14 @@
   yine Kuran kelimeleri ile süsleyelim. Mail grubuna katılın, 
   Ramazan boyunca size her gün birkaç ayet hatırlatalım.
 </p>
-<p>12 Nisan'da Ramazan'a iki saat kala başlıyoruz inşaallah.</p>
+<s>12 Nisan'da Ramazan'a iki saat kala başlıyoruz inşaallah.</s>
 
 <h3>Paylaşalım lutfen:</h3>
-<p><a 
-href="https://groups.google.com/g/rama30">https://groups.google.com/g/rama30</a> 
+<p>
+<a target=Kuran href="https://groups.google.com/g/rama30">
+  https://groups.google.com/g/rama30</a> <br>
+<a target=Kuran href="https://twitter.com/okuyun5">
+  https://twitter.com/okuyun5</a>
 </p>
 
 <h3>Amacımız</h3>
@@ -45,7 +48,7 @@ En azından, Kuran kelimelerine aşina olursunuz.</p>
 <h3>Konular</h3>
 <div>
   <ol><a href="bismillah.html">Bismillah her hayrın başıdır</a></ol>
-  <ol>1. Karanlıklardan Nûra</ol>
+  <ol>1. <a href="nura.html">Karanlıklardan Nûra</a></ol>
   <ol>2. Allah Yeter</ol>
   <ol>3. Mevlanız Allah</ol>
   <ol>4. Rabbimiz Allah</ol>
@@ -82,7 +85,7 @@ En azından, Kuran kelimelerine aşina olursunuz.</p>
 <p>Bu konular önceki Ramazan'da blog olarak yayınlanmıştı. 
 Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
 </p>
-<!-- <a target="video"
+<!-- <a target=Kuran
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
 Videolar burada</a> -->
 
