--- a/rama/nura.html
+++ b/rama/nura.html
@@ -40,8 +40,10 @@ Lakin buradaki konumuz fiziksel ışık değil. Ona benzetme yaparak manevi ış
 <br>
 <img data-original-height="742" data-original-width="424" width="424" 
 src="https://1.bp.blogspot.com/-NKWFsgxUJDA/XqL8XmaMFQI/AAAAAAAAbHA/zmetTm95ELw3pSDEADDQIb9edX87J5DIQCLcBGAsYHQ/s1600/minezzulumat.JPG" />
-<div class="small center">
-  <!--a href="/Kuran/#b={lZ~uluma%60ti%20%3CilaY"-->Rehber'de ara</a></div>
+<div class="center">
+  <a href="/Rehber/finder.html#b={lZ~uluma%60ti%20%3CilaY" target="finder">
+    Rehber'de ara</a>
+</div>
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
