--- a/rama/yeter.html
+++ b/rama/yeter.html
@@ -12,12 +12,12 @@
 
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
-<div class="monospace">
-hasb: kâfi, yeterli<br>
-hasbiye: bana yeter<br>
-hasbunâ: bize yeter<br>
-hasbuke: sana yeter<br>
-</div><br>
+<pre>
+    hasb: kâfi, yeterli
+    hasbiye: bana yeter
+    hasbunâ: bize yeter
+    hasbuke: sana yeter
+</pre>
 Dünya, insanın imtihan meydanı olmuş. İmtihanı geçerse rahmete erişecek, değilse husrân... Bu imtihanlar karşısında sarsılmamanın, yıkılmamanın, yıkılsa dahi hakkı tutup kaldırmanın tek yolunu bu kelime özetliyor.<br>
 <br>
 <b><span class="ayet large">hasbiyallâh </span></b>(Allah bana yeter)<br>
