--- a/rama/index.html
+++ b/rama/index.html
@@ -24,32 +24,21 @@
   <body>
 <h2>Ramazan 30 Gün</h2>
 
-<p>Evde geçireceğimiz bu ikinci Ramazan mevsimini 
-  yine Kuran kelimeleri ile süsleyelim. Mail grubuna katılın, 
+<p>Evde geçireceğimiz ikinci Ramazan mevsimini yine Kuran kelimeleri ile süsleyelim. 
+<a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna </a> ya da
+<a target=Kuran href="https://twitter.com/okuyun5">Twitter hesabına</a> katılın,
   Ramazan boyunca size her gün birkaç ayet hatırlatalım.
-</p>
-<s>12 Nisan'da Ramazan'a iki saat kala başlıyoruz inşaallah.</s>
-
-<h3>Paylaşalım lutfen:</h3>
-<p>
-<a target=Kuran href="https://groups.google.com/g/rama30">
-  https://groups.google.com/g/rama30</a> <br>
-<a target=Kuran href="https://twitter.com/okuyun5">
-  https://twitter.com/okuyun5</a>
+  Amacımız, Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.
+  Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
+  <q>Ama Arapça okuyamam</q> diyorsanız,
+  en azından, Kuran kelimelerine aşina olursunuz.
 </p>
 
-<h3>Amacımız</h3>
-<p>Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.
-Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
-</p>
-<p><b><q>... ama Arapça okuyamam</q></b><br>
-En azından, Kuran kelimelerine aşina olursunuz.</p>
-
-<h3>Konular</h3>
+<h3>Konular <small>(her gün bir link ekleniyor)</small></h3>
 <div>
   <ol><a href="bismillah.html">Bismillah her hayrın başıdır</a></ol>
   <ol>1. <a href="nura.html">Karanlıklardan Nûra</a></ol>
-  <ol>2. Allah Yeter</ol>
+  <ol>2. <a href="yeter.html">Allah Yeter</a></ol>
   <ol>3. Mevlanız Allah</ol>
   <ol>4. Rabbimiz Allah</ol>
   <ol>5. Canları çektiği halde...</ol>
@@ -85,6 +74,14 @@ En azından, Kuran kelimelerine aşina olursunuz.</p>
 <p>Bu konular önceki Ramazan'da blog olarak yayınlanmıştı. 
 Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
 </p>
+<h3>Paylaşalım lutfen:</h3>
+<p>
+<a target=Kuran href="https://groups.google.com/g/rama30">
+  https://groups.google.com/g/rama30</a> <br>
+<a target=Kuran href="https://twitter.com/okuyun5">
+  https://twitter.com/okuyun5</a>
+</p>
+
 <!-- <a target=Kuran
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
 Videolar burada</a> -->
