--- a/rama/mevla.html
+++ b/rama/mevla.html
@@ -53,6 +53,12 @@ src="https://1.bp.blogspot.com/-BqXjG0lqxU4/XqFwHbMQgrI/AAAAAAAAbGU/FafdG3VP0oYl
 <a href="/Rehber/finder.html#b=mawolaY%60kumo" target="finder">
     Bu beş ayeti bulan link</a><br>
 <br><br>
+Ya bilinçli olarak Allah'ı inkar edenler?
+<div class=ayet>
+47:11 <b>veennel-kâfirîne <a name="v=47:11&r=wly">lâ mevlâ lehum</a></b><br>
+<i>Allah inananların Mevlâsıdır. Kafirlerin ise Mevlâsı yoktur.</i><br>
+</div>
+<br><br>
 Aynı anlam grubunda bir de Mevlânâ kelimesi var:
 <div class=ayet>
 2:286 <b><a name="v=2:286&r=wly">ente mevlânâ</a></b><br>
