--- a/rama/bismillah.html
+++ b/rama/bismillah.html
@@ -52,7 +52,7 @@ Gemiye binmenin Allah'a teslimiyet olduğunu anlıyoruz. Evet, Hz. Nûh geminin 
 <i>"(Mektup) Süleyman'dandır, bismillâhirrahmânirrahîm diyor"</i>
 </span>
 <br><br>
-Hem melik (kral), hem nebi. Aynı anda saltanat ve hikmet sahibi. Yıldızlara secde eden bir kavmin melikesine mektup yazıyor. Ayette, melikenin ağzından mektubun ilk satırı okunuyor. Aşağıdaki hat levhasına konu olmuş. Hem ayet yazılı, hem de besmele. Surenin devamında, bu söz ile hayretler içinde kalan melikenin sonraki teslimiyeti anlatılıyor.
+Hem melik (kral), hem nebi. Aynı anda saltanat ve hikmet sahibi. <s>Yıldızlara</s> Güneşe secde eden bir kavmin melikesine mektup yazıyor. Ayette, melikenin ağzından mektubun ilk satırı okunuyor. Aşağıdaki hat levhasına konu olmuş. Hem ayet yazılı, hem de besmele. Surenin devamında, bu söz ile hayretler içinde kalan melikenin sonraki teslimiyeti anlatılıyor.
 <br><br>
 <img data-original-height="240" data-original-width="240" 
 src="https://1.bp.blogspot.com/-sMcMvTUGnhw/XqEg-VttkVI/AAAAAAAAbFw/MdK5bxklfx4Dgc5GtS2b4sW0jhnp9QtLgCEwYBhgL/s1600/besmele.0.jpg" />
