--- a/rama/index.html
+++ b/rama/index.html
@@ -25,7 +25,7 @@
 <h2>Ramazan 30 Gün</h2>
 
 <p>Evde geçireceğimiz ikinci Ramazan mevsimini yine Kuran kelimeleri ile süsleyelim. 
-<a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna </a> ya da
+<a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna</a> ya da
 <a target=Kuran href="https://twitter.com/okuyun5">Twitter hesabına</a> katılın,
   Ramazan boyunca size her gün birkaç ayet hatırlatalım.
   Amacımız, Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.
@@ -39,7 +39,7 @@
   <ol><a href="bismillah.html">Bismillah her hayrın başıdır</a></ol>
   <ol>1. <a href="nura.html">Karanlıklardan Nûra</a></ol>
   <ol>2. <a href="yeter.html">Allah Yeter</a></ol>
-  <ol>3. Mevlanız Allah</ol>
+  <ol>3. <a href="mevla.html">Mevlanız Allah</a></ol>
   <ol>4. Rabbimiz Allah</ol>
   <ol>5. Canları çektiği halde...</ol>
   <ol>6. Güzel bir borç</ol>
