--- a/rama/index.html
+++ b/rama/index.html
@@ -40,7 +40,7 @@
   <ol>1. <a href="nura.html">Karanlıklardan Nûra</a></ol>
   <ol>2. <a href="yeter.html">Allah Yeter</a></ol>
   <ol>3. <a href="mevla.html">Mevlanız Allah</a></ol>
-  <ol>4. Rabbimiz Allah</ol>
+  <ol>4. <a href="rabbim.html">Rabbimiz Allah</a></ol>
   <ol>5. Canları çektiği halde...</ol>
   <ol>6. Güzel bir borç</ol>
   <ol>7. Şükür ve küfür</ol>
