--- a/ders/index.html
+++ b/ders/index.html
@@ -19,7 +19,7 @@
 <ol>
   <li><a href="01.html">İsimler</a></li>
   <li><a href=02.html>Cümle yapısı</a></li>
-  <li>Sıfat ve zamirler</li>
+  <li><a href=03.html>Sıfat ve zamirler</a></li>
   <li>Tekil, ikil, çoğul</li>
   <li><a href="05.html">Sayılar</a></li>
   <li>Fiil çekimi</li>
