--- a/rama/index.html
+++ b/rama/index.html
@@ -41,7 +41,7 @@
   <ol>2. <a href="yeter.html">Allah Yeter</a></ol>
   <ol>3. <a href="mevla.html">Mevlanız Allah</a></ol>
   <ol>4. <a href="rabbim.html">Rabbimiz Allah</a></ol>
-  <ol>5. Canları çektiği halde...</ol>
+  <ol>5. <a href="canlar.html">Canları çektiği halde...</a></ol>
   <ol>6. Güzel bir borç</ol>
   <ol>7. Şükür ve küfür</ol>
   <ol>8. O gün yüzler...</ol>
