--- a/rama/index.html
+++ b/rama/index.html
@@ -42,7 +42,7 @@
   <ol>3. <a href="mevla.html">Mevlanız Allah</a></ol>
   <ol>4. <a href="rabbim.html">Rabbimiz Allah</a></ol>
   <ol>5. <a href="canlar.html">Canları çektiği halde...</a></ol>
-  <ol>6. Güzel bir borç</ol>
+  <ol>6. <a href="hasen.html">Güzel bir borç</a></ol>
   <ol>7. Şükür ve küfür</ol>
   <ol>8. O gün yüzler...</ol>
   <ol>9. Allah'ın yüzü</ol>
