--- a/rama/kufur.html
+++ b/rama/kufur.html
@@ -20,8 +20,11 @@
 diye beni sınamak için..."</i>
 </div>
 <br><br>
-<img src="https://1.bp.blogspot.com/-Mkh3BnbfvDA/XqP3AnZsYxI/AAAAAAAAbIU/tcTsOPSHCRcE2LhKTgVFhDFY6icujcsXwCEwYBhgL/s1600/min%2Bfadli%2Brabbi.jpg" />
-<div class="center">hâzâ min fadli rabbiy</div>
+<img src="http://www.ozcay.com/mgaleri/buyuk/92HazaminfadliRabbi.jpg" /> 
+<!-- src="https://1.bp.blogspot.com/-Mkh3BnbfvDA/XqP3AnZsYxI/AAAAAAAAbIU/tcTsOPSHCRcE2LhKTgVFhDFY6icujcsXwCEwYBhgL/s1600/min%2Bfadli%2Brabbi.jpg"-->
+<div class="center">
+  <a href="http://www.ozcay.com/mehmed/galeri#94" target="Kuran">Mehmed Özçay</a> 
+  hâzâ min fadli rabbiy</div>
 <br>
 Küfür genellikle imanın tersi olarak bilinir. Halbuki Kuran dilinde hem iman hem de şükür kelimelerinin zıddıdır. Söz konusu ayet Neml suresinde geçiyor, cinlere ve rüzgara bile hükmeden, hem nebi hem melik olan Hz Suleyman'ın sözü.
 <br><br>
