--- a/rama/kufur.html
+++ b/rama/kufur.html
@@ -20,7 +20,7 @@
 diye beni sınamak için..."</i>
 </div>
 <br><br>
-<img src="http://www.ozcay.com/mgaleri/buyuk/92HazaminfadliRabbi.jpg" /> 
+<img src="92HazaminfadliRabbi.jpg" /> 
 <!-- src="https://1.bp.blogspot.com/-Mkh3BnbfvDA/XqP3AnZsYxI/AAAAAAAAbIU/tcTsOPSHCRcE2LhKTgVFhDFY6icujcsXwCEwYBhgL/s1600/min%2Bfadli%2Brabbi.jpg"-->
 <div class="center">
   <a href="http://www.ozcay.com/mehmed/galeri#94" target="Kuran">Mehmed Özçay</a> 
@@ -41,8 +41,7 @@ Küfür kelimesinin bu anlamına işaret eden
 14:7 <i>Rabbiniz şöyle bildirmişti: 
 <a name="v=14:7&r=$kr&r=kfr">Şükrederseniz</a> elbette artırırım, 
 küfür (nankörlük) ederseniz hiç şüphesiz azabım çok şiddetlidir.</i>
-</div>
-<br><br>
+</div><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
 <iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/we82pOddODg" width="560"></iframe>
