9. Allah'ın yüzü

--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -15,7 +15,7 @@
 
 <ol>7. <a href="kufur.html">Şükür ve küfür</a></ol>
 <ol>8. <a href="yuzler.html">O gün yüzler...</a></ol>
-<ol>9. <a href="">Allah'ın yüzü</a></ol>
+<ol>9. <a href="vecih.html">Allah'ın yüzü</a></ol>
 <ol>10. <a href="mulk.html">Bugün mülk kimin?</a></ol>
 
 <p class=ayet>
