--- a/rama/index.html
+++ b/rama/index.html
@@ -43,12 +43,12 @@
   <ol>4. <a href="rabbim.html">Rabbimiz Allah</a></ol>
   <ol>5. <a href="canlar.html">Canları çektiği halde...</a></ol>
   <ol>6. <a href="hasen.html">Güzel bir borç</a></ol>
-  <ol>7. Şükür ve küfür</ol>
+  <ol>7. <a href="kufur.html">Şükür ve küfür</a></ol>
   <ol>8. O gün yüzler...</ol>
   <ol>9. Allah'ın yüzü</ol>
   <ol>10. Bugün mülk kimin?</ol>
   <ol>11. İbrahim milleti</ol>
-  <ol>12. On iki</ol>
+  <ol>12. Doğruluk dili</ol>
   <ol>13. İbret alın</ol>
   <ol>14. Kime hikmet verildiyse</ol>
   <ol>15. Yumuşak huy</ol>
@@ -79,7 +79,9 @@ Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
 <a target=Kuran href="https://groups.google.com/g/rama30">
   https://groups.google.com/g/rama30</a> <br>
 <a target=Kuran href="https://twitter.com/okuyun5">
-  https://twitter.com/okuyun5</a>
+  https://twitter.com/okuyun5</a> <br>
+<a target=Kuran href="https://www.instagram.com/okuyun.5">
+  https://www.instagram.com/okuyun.5</a> 
 </p>
 
 <!-- <a target=Kuran
