--- a/rama/index.html
+++ b/rama/index.html
@@ -44,7 +44,7 @@
   <ol>5. <a href="canlar.html">Canları çektiği halde...</a></ol>
   <ol>6. <a href="hasen.html">Güzel bir borç</a></ol>
   <ol>7. <a href="kufur.html">Şükür ve küfür</a></ol>
-  <ol>8. O gün yüzler...</ol>
+  <ol>8. <a href="yuzler.html">O gün yüzler...</a></ol>
   <ol>9. Allah'ın yüzü</ol>
   <ol>10. Bugün mülk kimin?</ol>
   <ol>11. İbrahim milleti</ol>
