--- a/rama/millet.html
+++ b/rama/millet.html
@@ -50,6 +50,17 @@ Bu nedenle iki tecümeye de [hanif] şeklinde doğru yerine ekledim.
 Rehber'de arayınca sadece 
 <a href="/Rehber/finder.html#b=mlp%20%3CbrAhym" target="finder">6 ayet</a> buluyor, 
 çünkü iki ayette araya giren "baba" kelimesi bulmaya engel.
+<p>Hz İbrahim hakkında, "Halil" unvanından başka özgün ve örnek nitelikler okuyoruz:
+</p>
+<p class=ayet>
+11:75 <b>inne ibrâhîme lehalîmun evvâhun munîb</b><br>
+<i>Gerçekten <a name="v=11:75&r=%3CiboraAhiym">İbrahim</a> 
+yumuşak huylu, içli ve kendisini Allah'a vermiş biriydi.</i> <br>
+<br>
+16:120 <i>Gerçekten <a name="v=16:120&r=%3CiboraAhiym">İbrahim</a>, 
+hak dine yönelen [hanif], Allah'a itaat [qâniten] üzere bulunan 
+tek başına bir ümmet idi, ortak koşanlardan değildi.</i> <br>
+</p>
 <br><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
