--- a/rama/sidq.html
+++ b/rama/sidq.html
@@ -28,7 +28,7 @@ Ona ve çocuklarına bu ayrıcalık verilmiş.<br>
 </p><br>
 <img src="sidq.jpg" />
 <div class="center">
-  <b>sidq:</b> harflerin ölçüsü <a  target="Kuran"
+  <b>sidq:</b> harflerin bile ölçüsü var <a  target="Kuran"
   href="https://www.fatemidawat.com/teachings/our-identity/imaan-belief-and-truthfulness-who-should-you-believe-and-why"></a>
 </div>
 <b></b>
@@ -36,20 +36,28 @@ Ona ve çocuklarına bu ayrıcalık verilmiş.<br>
 Doğruluk o kadar önemli ki, Bediüzzaman Said Nursî <i>Münazarat</i> adlı eserinde 
 toplumun en önemli ihtiyacını <b>sıdk</b> olarak üç şekilde vurgulamış: <br> 
 &dash; Herşeyden evvel bize lâzım olan nedir? <br> 
-&dash; Doğruluk. <br> 
+&dash; <i>Doğruluk</i> <br> 
 &dash; Daha? <br> 
-&dash; Yalan söylememek. <br> 
+&dash; <i>Yalan söylememek</i> <br> 
 &dash; Sonra? <br> 
-&dash; Sıdk...
+&dash; <i>Sıdk...</i>
 </p><p>
 Doğruluk o kadar önemli ki, 
-<a href="/Rehber/finder.html#b=SidoqK" target="finder">beş ayette</a>
-benzeri tamlamalar buluyoruz:<br> 
-17:80 <b><a name="v=17:80&r=Sdq">mudhale sidqin</a></b> Doğruluk girişi<br>
-17:80 <b><a name="v=17:80&r=Sdq">muhrace sidqin</a></b> Doğruluk çıkışı<br>
-10:93 <b><a name="v=10:93&r=Sdq">mubevvee sidqin</a></b> Doğruluk yurdu<br>
-10:2 &ensp;<b><a name="v=10:2&r=Sdq">qademe sidqin</a></b> Doğruluk makamı<br>
-54:55 <b><a name="v=54:55&r=Sdq">maq'adi sidqin</a></b> Doğruluk tahtı<br>
+<a href="/Rehber/finder.html#b=SidoqK" target="finder">dört ayette</a>
+daha benzeri tamlamalar buluyoruz:<br> 
+<p class=ayet>
+17:80 <b>rabbi edhilnî <a name="v=17:80&r=Sdq&r=dxl">mudhale sidqin</a>
+veahricnî <a name="v=17:80&r=Sdq&r=xrj">muhrace sidqin</a></b><br>
+<i>Rabbim, gireceğim yere Doğrulukla girdir, çıkacağım yerden Doğrulukla çıkart</i>
+<br><br>
+10:93 <b>veleqad bevve-nâ benî isrâîle <a name="v=10:93&r=Sdq&r=bwA">mubevvee sidqin</a></b><br>
+<i>İsrailoğullarını Doğruluk yurdunda yerleştirdik</i>
+<br><br>
+10:2 <b>lehum <a name="v=10:2&r=Sdq&r=qdm">qademe sidqin</a> 'inde rabbihim</b><br>
+<i>Rableri katında onlar için Doğruluk makamı olduğunu müjdele</i>
+<br><br>
+54:55 <b>fî <a name="v=54:55&r=Sdq&r=qEd">maq'adi sidqin</a> 'inde melîkin muqtedir</b><br>
+<i>Doğruluk tahtında, mülk ve iktidar Sahibinin yüce katında</i>
 </p><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
