--- a/rama/mulk.html
+++ b/rama/mulk.html
@@ -50,10 +50,10 @@ Mesela Hz Yusuf'un zindandaki sözü: (12:39) <br>
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eKGi3au0MX8" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
