--- a/rama/sidq.html
+++ b/rama/sidq.html
@@ -58,13 +58,25 @@ veahricnî <a name="v=17:80&r=Sdq&r=xrj">muhrace sidqin</a></b><br>
 <br><br>
 54:55 <b>fî <a name="v=54:55&r=Sdq&r=qEd">maq'adi sidqin</a> 'inde melîkin muqtedir</b><br>
 <i>Doğruluk tahtında, mülk ve iktidar Sahibinin yüce katında</i>
+</p><p>
+Doğruluk o kadar önemli ki, Efendimiz (Salat ve selam ona) 
+<a href="https://www.nurulenvar.com/her-seyden-once-bize-lazim-olan-sey/" 
+target="Kuran">en çok bu konuda</a> uyarmış: <br>
+Konuştuğunuz zaman doğru konuşun, vaadettiğiniz zaman yerine getirin. <br>
+Yalan, Cehennem kapılarından bir kapıdır. <br>
+Aldatan Cehennem’dedir. <br>
+Yalan, imana zıttır. <br>
+Yalan, münafıklık alametidir. <br>
+Aleyhinize de olsa doğru söyleyin. <br>
+Doğruluktan ayrılmayın. Doğruluk sizi iyiliğe, o da Cennet’e ulaştırır. <br>
+Yalandan sakının. Yalan insanı kötülüğe, o da Cehennem’e götürür. <br>
 </p><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/b1zg4W4KDTA" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
