--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -25,16 +25,15 @@
 <i></i>
 </p>
 <br><br>
-<br><br>
 <img src="" />
 <div class="center small">
-Ref: <a  target="Kuran"
+<a  target="Kuran"
   href=""></a>
 </div><br>
 <b></b>
 <br>
 <br><br>
-<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder">6 ayet</a><br> 
+<a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
 <div class=ayet>
 <b></b> <br>
 <i></i> <br>
