--- a/ders/03.html
+++ b/ders/03.html
@@ -73,10 +73,10 @@ değil gazaba uğrayanların ve sapıtanların
 <br>
 <p>Dersler <button class=goBack>◀</button>
 <br><br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WHX0R2gxmW4" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe> -->
+</iframe>
 </p>
     <script src="init.js"></script>
   </body>
