--- a/rama/vecih.html
+++ b/rama/vecih.html
@@ -57,10 +57,10 @@ Ref: <a  target="Kuran"
 </div><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
-<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uT3AoucD2Qk" 
   title="YouTube video player" frameborder="0"  allowfullscreen
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture">
-</iframe><br> -->
+</iframe><br>
 
     <script src="init.js"></script>
   </body>
