--- a/rama/index.html
+++ b/rama/index.html
@@ -45,7 +45,7 @@
   <ol>6. <a href="hasen.html">Güzel bir borç</a></ol>
   <ol>7. <a href="kufur.html">Şükür ve küfür</a></ol>
   <ol>8. <a href="yuzler.html">O gün yüzler...</a></ol>
-  <ol>9. Allah'ın yüzü</ol>
+  <ol>9. <a href="vecih.html">Allah'ın yüzü</a></ol>
   <ol>10. Bugün mülk kimin?</ol>
   <ol>11. İbrahim milleti</ol>
   <ol>12. Doğruluk dili</ol>
