--- a/rama/vecih.html
+++ b/rama/vecih.html
@@ -52,8 +52,8 @@ Ref: <a  target="Kuran"
 <img style="width: 100%;"
 src="https://1.bp.blogspot.com/-lWGxg0iqN5s/Xqvgs6VH22I/AAAAAAAAbMI/17CKwFKWmQ8KlBh_rXFphcPlo1WsXGxoACEwYBhgL/s1600/kulli%2B%25C5%259Fey-in%2Bhalik.JPG" />
 <div class="center small">
-Ref: <a  target="Kuran"
-  href="https://www.flickr.com/photos/muzafferozak/">kullu men 'aleyhâ fân</a>
+Ref: <a href="https://www.flickr.com/photos/muzafferozak/40752432912/"
+    target="Kuran">kullu men 'aleyhâ fân</a>
 </div><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
