--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -13,10 +13,10 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<ol>9. <a href="vecih.html">Allah'ın yüzü</a></ol>
 <ol>10. <a href="mulk.html">Bugün mülk kimin?</a></ol>
 <ol>11. <a href="millet.html">İbrahim milleti</a></ol>
 <ol>12. <a href="sidq.html">Doğruluk dili</a></ol>
+<ol>13. <a href="ibret.html">İbret alın</a></ol>
 
 <p class=ayet>
 <b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
