--- a/rama/ibret.html
+++ b/rama/ibret.html
@@ -29,8 +29,8 @@ Ey basiret sahipleri, <a name="v=59:2&r=Ebr&r=bSr"> ibret alın!</a></i>
 </p>
 <img src="https://1.bp.blogspot.com/-vRIQFzgCaNE/XqvTnPDuYbI/AAAAAAAAbLw/Rwy0CKi5qcUviiHJfkLmbVdDyAxifqSsQCLcBGAsYHQ/s1600/fatebiru.JPG" />
 <div class="center small">
-Ref: <a href="https://www.flickr.com/photos/muzafferozak/28060909273"
-     target="Kuran">Muzaffer Ozak sitesi</a>
+<a href="https://www.flickr.com/photos/muzafferozak/28060909273"
+     target="Kuran">fa'tebirû yâ ulil-ebsâr</a>
 </div><br>
 <p class=ayet>
 24:44 <i>Allah gece ile gündüzü evirip çeviriyor. 
