--- a/rama/index.html
+++ b/rama/index.html
@@ -46,11 +46,11 @@
   <ol>7. <a href="kufur.html">Şükür ve küfür</a></ol>
   <ol>8. <a href="yuzler.html">O gün yüzler...</a></ol>
   <ol>9. <a href="vecih.html">Allah'ın yüzü</a></ol>
-  <ol>10. Bugün mülk kimin?</ol>
+  <ol>10. <a href="mulk.html">Bugün mülk kimin?</a></ol>
   <ol>11. İbrahim milleti</ol>
   <ol>12. Doğruluk dili</ol>
   <ol>13. İbret alın</ol>
-  <ol>14. Kime hikmet verildiyse</ol>
+  <ol>14. Hikmeti dilediğine verir</ol>
   <ol>15. Yumuşak huy</ol>
 </div>
 <div>
