--- a/rama/sidq.html
+++ b/rama/sidq.html
@@ -30,8 +30,7 @@ Ona ve çocuklarına bu ayrıcalık verilmiş.<br>
 <div class="center">
   <b>sidq:</b> harflerin bile ölçüsü var <a  target="Kuran"
   href="https://www.fatemidawat.com/teachings/our-identity/imaan-belief-and-truthfulness-who-should-you-believe-and-why"></a>
-</div>
-<b></b>
+</div><br>
 <p>
 Doğruluk o kadar önemli ki, Bediüzzaman Said Nursî <i>Münazarat</i> adlı eserinde 
 toplumun en önemli ihtiyacını <b>sıdk</b> olarak üç şekilde vurgulamış: <br> 
@@ -41,10 +40,11 @@ toplumun en önemli ihtiyacını <b>sıdk</b> olarak üç şekilde vurgulamış:
 &dash; <i>Yalan söylememek</i> <br> 
 &dash; Sonra? <br> 
 &dash; <i>Sıdk...</i>
-</p><p>
+</p><br>
+<p>
 Doğruluk o kadar önemli ki, 
 <a href="/Rehber/finder.html#b=SidoqK" target="finder">dört ayette</a>
-daha benzeri tamlamalar buluyoruz:<br> 
+benzeri tamlamalar buluyoruz:<br> 
 <p class=ayet>
 17:80 <b>rabbi edhilnî <a name="v=17:80&r=Sdq&r=dxl">mudhale sidqin</a>
 veahricnî <a name="v=17:80&r=Sdq&r=xrj">muhrace sidqin</a></b><br>
@@ -58,19 +58,21 @@ veahricnî <a name="v=17:80&r=Sdq&r=xrj">muhrace sidqin</a></b><br>
 <br><br>
 54:55 <b>fî <a name="v=54:55&r=Sdq&r=qEd">maq'adi sidqin</a> 'inde melîkin muqtedir</b><br>
 <i>Doğruluk tahtında, mülk ve iktidar Sahibinin yüce katında</i>
-</p><p>
+</p><br>
+<p>
 Doğruluk o kadar önemli ki, Efendimiz (Salat ve selam ona) 
 <a href="https://www.nurulenvar.com/her-seyden-once-bize-lazim-olan-sey/" 
-target="Kuran">en çok bu konuda</a> uyarmış: <br>
-Konuştuğunuz zaman doğru konuşun, vaadettiğiniz zaman yerine getirin. <br>
-Yalan, Cehennem kapılarından bir kapıdır. <br>
-Aldatan Cehennem’dedir. <br>
-Yalan, imana zıttır. <br>
-Yalan, münafıklık alametidir. <br>
-Aleyhinize de olsa doğru söyleyin. <br>
-Doğruluktan ayrılmayın. Doğruluk sizi iyiliğe, o da Cennet’e ulaştırır. <br>
-Yalandan sakının. Yalan insanı kötülüğe, o da Cehennem’e götürür. <br>
-</p><br>
+target="Kuran">bu konuda defalarca uyarmış</a>: <br>
+<i>
+• Doğruluktan ayrılmayın. Doğruluk sizi iyiliğe, o da Cennet’e ulaştırır. <br>
+• Konuştuğunuz zaman doğru konuşun, vaadettiğiniz zaman yerine getirin. <br>
+• Yalan, Cehennem kapılarından bir kapıdır. <br>
+• Aldatan Cehennem’dedir. <br>
+• Yalan, imana zıttır. <br>
+• Yalan, münafıklık alametidir. <br>
+• Aleyhinize de olsa doğru söyleyin. <br>
+• Yalandan sakının. Yalan insanı kötülüğe, o da Cehennem’e götürür. <br>
+</i></p><br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/b1zg4W4KDTA" 
