--- a/rama/yeni.html
+++ b/rama/yeni.html
@@ -13,10 +13,10 @@
   <body>
 <h2><span id=title></span> &emsp;<button class=goBack>◀</button></h2>
 
-<ol>10. <a href="mulk.html">Bugün mülk kimin?</a></ol>
 <ol>11. <a href="millet.html">İbrahim milleti</a></ol>
 <ol>12. <a href="sidq.html">Doğruluk dili</a></ol>
 <ol>13. <a href="ibret.html">İbret alın</a></ol>
+<ol>14. <a href="hikmet.html">Hikmeti dilediğine verir</a></ol>
 
 <p class=ayet>
 <b><a name="v=40:16&r=wHd&r=qhr"></a></b> <br> 
@@ -34,12 +34,12 @@
 <br>
 <br><br>
 <a href="/Kuran/mujam.html#r=wHd&r=qhr" target="finder"></a><br> 
-<div class=ayet>
+<p class=ayet>
 <b></b> <br>
 <i></i> <br>
 <b></b> <br>
 <i><a name="v=12:39&r=wHd&r=qhr"></a></i>
-</div><br>
+</p><br>
 <br>
 <p>Ramazan <button class=goBack>◀</button></p>
 <br>
