--- a/rama/index.html
+++ b/rama/index.html
@@ -47,7 +47,7 @@
   <ol>8. <a href="yuzler.html">O gün yüzler...</a></ol>
   <ol>9. <a href="vecih.html">Allah'ın yüzü</a></ol>
   <ol>10. <a href="mulk.html">Bugün mülk kimin?</a></ol>
-  <ol>11. İbrahim milleti</ol>
+  <ol>11. <a href="millet.html">İbrahim milleti</a></ol>
   <ol>12. Doğruluk dili</ol>
   <ol>13. İbret alın</ol>
   <ol>14. Hikmeti dilediğine verir</ol>
