--- a/rama/millet.html
+++ b/rama/millet.html
@@ -43,9 +43,9 @@ O, ortak koşanlardan değildi.</i> <br>
 </p><p>
 Bu iki kavram yine tek kelime ile tercüme edilmiş. Ayrıca, <b>millet</b> 
 kelimesinin yanında <b>hanif</b> sıfatına rastlıyoruz. 
-İlk ayetin tecrümesinde yok, ikincide Allah'ı birleyen olarak çevrilmiş. 
+İlk ayetin tercümesinde yok, ikincide Allah'ı birleyen olarak çevrilmiş. 
 Bu önemli sıfat Hz İbrahim'i (ve biraz da milletini) niteliyor. 
-Bu nedenle iki tecümeye de [hanif] şeklinde doğru yerine ekledim.
+Bu nedenle iki tercümeye de [hanif] şeklinde doğru yerine ekledim.
 </p> 
 Rehber'de arayınca sadece 
 <a href="/Rehber/finder.html#b=mlp%20%3CbrAhym" target="finder">6 ayet</a> buluyor, 
