replace <ol> by <li>

--- a/rama/index.html
+++ b/rama/index.html
@@ -10,9 +10,14 @@
     <title>Ramazan 1442</title>
   </head>
   <style>
-    div {
+    ol {
       display: inline-block;
-      width: 250px;
+      list-style: none;
+      padding: 10px;
+      margin: 0;
+    }
+    li {
+      margin: 6px;
     }
     h3 {
       margin-bottom: 4px;
@@ -22,7 +27,49 @@
     }
   </style>
   <body>
-<h2>Ramazan 30 Gün</h2>
+
+<h3>Konular <small>(her gün bir link ekleniyor)</small></h3>
+<ol>
+  <li><a href="bismillah.html">Bismillah her hayrın başıdır</a></li>
+  <li>1. <a href="nura.html">Karanlıklardan Nûra</a></li>
+  <li>2. <a href="yeter.html">Allah Yeter</a></li>
+  <li>3. <a href="mevla.html">Mevlanız Allah</a></li>
+  <li>4. <a href="rabbim.html">Rabbimiz Allah</a></li>
+  <li>5. <a href="canlar.html">Canları çektiği halde...</a></li>
+  <li>6. <a href="hasen.html">Güzel bir borç</a></li>
+  <li>7. <a href="kufur.html">Şükür ve küfür</a></li>
+  <li>8. <a href="yuzler.html">O gün yüzler...</a></li>
+  <li>9. <a href="vecih.html">Allah'ın yüzü</a></li>
+  <li>10. <a href="mulk.html">Bugün mülk kimin?</a></li>
+  <li>11. <a href="millet.html">İbrahim milleti</a></li>
+  <li>12. <a href="sidq.html">Doğruluk dili</a></li>
+  <li>13. İbret alın</li>
+  <li>14. Hikmeti dilediğine verir</li>
+  <li>15. Yumuşak huy</li>
+</ol>
+<ol>
+  <li>16. Güzel bir örnek</li>
+  <li>17. Alemlere rahmet</li>
+  <li>18. lâ ilâhe illâ ...</li>
+  <li>19. On dokuz</li>
+  <li>20. yevme lâ yenfa'u</li>
+  <li>21. Emrolunduğun gibi</li>
+  <li>22. Emredileni yaparlar</li>
+  <li>23. Zikir ve şükür</li>
+  <li>24. Hesabı hızlıdır</li>
+  <li>25. Sabrı tavsiye</li>
+  <li>26. Ona "ol" der</li>
+  <li>27. inşâallâh</li>
+  <li>28. Korku ve hüzün</li>
+  <li>29. Onu Biz koruruz</li>
+  <li>30. Dualarının sonu</li>
+</ol>
+
+<p>Bu konular önceki Ramazan'da blog olarak yayınlanmıştı. 
+Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
+</p>
+
+<h3>Ramazan 30 Gün</h3>
 
 <p>Evde geçireceğimiz ikinci Ramazan mevsimini yine Kuran kelimeleri ile süsleyelim. 
 <a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna</a> ya da
@@ -34,46 +81,6 @@
   en azından, Kuran kelimelerine aşina olursunuz.
 </p>
 
-<h3>Konular <small>(her gün bir link ekleniyor)</small></h3>
-<div>
-  <ol><a href="bismillah.html">Bismillah her hayrın başıdır</a></ol>
-  <ol>1. <a href="nura.html">Karanlıklardan Nûra</a></ol>
-  <ol>2. <a href="yeter.html">Allah Yeter</a></ol>
-  <ol>3. <a href="mevla.html">Mevlanız Allah</a></ol>
-  <ol>4. <a href="rabbim.html">Rabbimiz Allah</a></ol>
-  <ol>5. <a href="canlar.html">Canları çektiği halde...</a></ol>
-  <ol>6. <a href="hasen.html">Güzel bir borç</a></ol>
-  <ol>7. <a href="kufur.html">Şükür ve küfür</a></ol>
-  <ol>8. <a href="yuzler.html">O gün yüzler...</a></ol>
-  <ol>9. <a href="vecih.html">Allah'ın yüzü</a></ol>
-  <ol>10. <a href="mulk.html">Bugün mülk kimin?</a></ol>
-  <ol>11. <a href="millet.html">İbrahim milleti</a></ol>
-  <ol>12. Doğruluk dili</ol>
-  <ol>13. İbret alın</ol>
-  <ol>14. Hikmeti dilediğine verir</ol>
-  <ol>15. Yumuşak huy</ol>
-</div>
-<div>
-  <ol>16. Güzel bir örnek</ol>
-  <ol>17. Alemlere rahmet</ol>
-  <ol>18. lâ ilâhe illâ ...</ol>
-  <ol>19. On dokuz</ol>
-  <ol>20. yevme lâ yenfa'u</ol>
-  <ol>21. Emrolunduğun gibi</ol>
-  <ol>22. Emredileni yaparlar</ol>
-  <ol>23. Zikir ve şükür</ol>
-  <ol>24. Hesabı hızlıdır</ol>
-  <ol>25. Sabrı tavsiye</ol>
-  <ol>26. Ona "ol" der</ol>
-  <ol>27. inşâallâh</ol>
-  <ol>28. Korku ve hüzün</ol>
-  <ol>29. Onu Biz koruruz</ol>
-  <ol>30. Dualarının sonu</ol>
-</div>
-
-<p>Bu konular önceki Ramazan'da blog olarak yayınlanmıştı. 
-Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
-</p>
 <h3>Paylaşalım lutfen:</h3>
 <p>
 <a target=Kuran href="https://groups.google.com/g/rama30">
@@ -84,9 +91,10 @@ Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
   https://www.instagram.com/okuyun.5</a> 
 </p>
 
-<!-- <a target=Kuran
+<a target=Kuran
 href="https://www.youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
-Videolar burada</a> -->
+Videolar burada</a>
+<br><br>
 
   </body>
 </html>
