--- a/ders/index.html
+++ b/ders/index.html
@@ -20,7 +20,7 @@
   <li><a href="01.html">İsimler</a></li>
   <li><a href=02.html>Cümle yapısı</a></li>
   <li><a href=03.html>Sıfat ve zamirler</a></li>
-  <li>Tekil, ikil, çoğul</li>
+  <li><a href=04.html>Tekil, ikil, çoğul</a></li>
   <li><a href="05.html">Sayılar</a></li>
   <li>Fiil çekimi</li>
   <li>Fiil türetme</li>
