--- a/rama/index.html
+++ b/rama/index.html
@@ -72,16 +72,15 @@ Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
 <h3>Ramazan 30 Gün</h3>
 
 <p>Evde geçireceğimiz ikinci Ramazan mevsimini yine Kuran kelimeleri ile süsleyelim. 
-<a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna</a> ya da
-<a target=Kuran href="https://twitter.com/okuyun5">Twitter hesabına</a> katılın,
-  Ramazan boyunca size her gün birkaç ayet hatırlatalım.
-  Amacımız, Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.
-  Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
-  <q>Ama Arapça okuyamam</q> diyorsanız,
-  en azından, Kuran kelimelerine aşina olursunuz.
+<a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna</a> katılın,
+Ramazan boyunca size her gün birkaç ayet hatırlatalım.
+Amacımız, Kuran ayı olan Ramazan iklimine yine Kuran kelimeleri ile bereket katmak.
+Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
+<q>Ama Arapça okuyamam</q> diyorsanız,
+en azından, Kuran kelimelerine aşina olursunuz.
 </p>
 
-<h3>Paylaşalım lutfen:</h3>
+<!-- <h3>Paylaşalım lutfen:</h3>
 <p>
 <a target=Kuran href="https://groups.google.com/g/rama30">
   https://groups.google.com/g/rama30</a> <br>
@@ -90,10 +89,38 @@ Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
 <a target=Kuran href="https://www.instagram.com/okuyun.5">
   https://www.instagram.com/okuyun.5</a> 
 </p>
-
 <a target=Kuran
-href="https://www.youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
-Videolar burada</a>
+href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
+Videolar burada</a> -->
+
+<h3>Paylaşalım:</h3>
+<p>&ensp;
+<a href="https://groups.google.com/g/rama30"  target="Kuran">
+<img alt="https://groups.google.com/g/rama30" src="/Kitap/icon/email.png" style="width: 36px" />
+</a>&ensp;
+<a href="https://twitter.com/okuyun5"  target="Kuran">
+<img alt="https://twitter.com/okuyun5" src="/Kitap/icon/twitter.png" style="width: 36px" />
+</a>&ensp;
+<a href="https://instagram.com/okuyun.5/"  target="Kuran">
+<img alt="https://instagram.com/okuyun.5/" src="/Kitap/icon/instagram.png" style="width: 34px"/>
+</a>&ensp;
+<a href="https://linkin.bio/okuyun-5"  target="Kuran">
+<img alt="https://linkin.bio/okuyun-5" src="/Kitap/icon/link2.png" style="width: 38px" />
+</a>&ensp;
+<!-- <a href="https://facebook.com/okuyun5"  target="Kuran">
+<img alt="https://facebook.com/okuyun5" src="/Kitap/icon/facebook.png" style="width: 36px" />
+</a>&ensp; -->
+</p>
+
+<h3>Muhteva (içerik):</h3>
+<p>&ensp;
+<a href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd"  target="Kuran">
+<img alt="https://youtube.com/" src="/Kitap/icon/youtube.png" style="width: 38px" />
+</a>&ensp;
+<a href="https://github.com/Okuyun/Kitap"  target="Kuran">
+<img alt="" src="/Kitap/icon/github.webp" style="width: 40px" />
+</a>
+</p>
 <br><br>
 
   </body>
