--- a/rama/index.html
+++ b/rama/index.html
@@ -12,12 +12,14 @@
   <style>
     ol {
       display: inline-block;
+      width: 49%;
       list-style: none;
-      padding: 10px;
+      padding: 0;
       margin: 0;
     }
     li {
-      margin: 6px;
+      padding: 6px 4px;
+      margin: 0;
     }
     h3 {
       margin-bottom: 4px;
@@ -25,10 +27,15 @@
     p {
       margin-top: 4px;
     }
+    @media screen and (max-width: 400px) {
+    ol  {
+        width: 95%;
+    }
+}
   </style>
   <body>
 
-<h3>Konular <small>(her gün bir link ekleniyor)</small></h3>
+<h3>Ramazan 30 Gün</h3>
 <ol>
   <li><a href="bismillah.html">Bismillah her hayrın başıdır</a></li>
   <li>1. <a href="nura.html">Karanlıklardan Nûra</a></li>
@@ -65,11 +72,9 @@
   <li>30. Dualarının sonu</li>
 </ol>
 
-<p>Bu konular önceki Ramazan'da blog olarak yayınlanmıştı. 
+<p>Bu konuların hemen hepsi önceki Ramazan'da blog olarak yayınlanmıştı. 
 Bu sene, Iqra4 yazılımı sayesinde Kuran ile iç içe...
 </p>
-
-<h3>Ramazan 30 Gün</h3>
 
 <p>Evde geçireceğimiz ikinci Ramazan mevsimini yine Kuran kelimeleri ile süsleyelim. 
 <a target=Kuran href="https://groups.google.com/g/rama30">Mail grubuna</a> katılın,
@@ -80,8 +85,8 @@ Kelimeleri hatırlarken, ilgili ayetin Kitap'taki yerine anında ulaşmak...
 en azından, Kuran kelimelerine aşina olursunuz.
 </p>
 
-<!-- <h3>Paylaşalım lutfen:</h3>
-<p>
+<h3>Paylaşalım lutfen:</h3>
+<!-- <p>
 <a target=Kuran href="https://groups.google.com/g/rama30">
   https://groups.google.com/g/rama30</a> <br>
 <a target=Kuran href="https://twitter.com/okuyun5">
@@ -93,35 +98,20 @@ en azından, Kuran kelimelerine aşina olursunuz.
 href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd">
 Videolar burada</a> -->
 
-<h3>Paylaşalım:</h3>
 <p>&ensp;
-<a href="https://groups.google.com/g/rama30"  target="Kuran">
-<img alt="https://groups.google.com/g/rama30" src="/Kitap/icon/email.png" style="width: 36px" />
-</a>&ensp;
-<a href="https://twitter.com/okuyun5"  target="Kuran">
-<img alt="https://twitter.com/okuyun5" src="/Kitap/icon/twitter.png" style="width: 36px" />
-</a>&ensp;
-<a href="https://instagram.com/okuyun.5/"  target="Kuran">
-<img alt="https://instagram.com/okuyun.5/" src="/Kitap/icon/instagram.png" style="width: 34px"/>
-</a>&ensp;
-<a href="https://linkin.bio/okuyun-5"  target="Kuran">
-<img alt="https://linkin.bio/okuyun-5" src="/Kitap/icon/link2.png" style="width: 38px" />
-</a>&ensp;
-<!-- <a href="https://facebook.com/okuyun5"  target="Kuran">
-<img alt="https://facebook.com/okuyun5" src="/Kitap/icon/facebook.png" style="width: 36px" />
-</a>&ensp; -->
+<a href="https://groups.google.com/g/rama30"  target="Kuran"><img alt="https://groups.google.com/g/rama30" src="/Kitap/icon/email.png" style="width: 36px" /></a>
+&ensp;
+<a href="https://twitter.com/okuyun5"  target="Kuran"><img alt="https://twitter.com/okuyun5" src="/Kitap/icon/twitter.png" style="width: 36px" /></a>
+&ensp;
+<a href="https://instagram.com/okuyun.5/"  target="Kuran"><img alt="https://instagram.com/okuyun.5/" src="/Kitap/icon/instagram.png" style="width: 34px"/></a>
+&ensp;
+<a href="https://linkin.bio/okuyun-5"  target="Kuran"><img alt="https://linkin.bio/okuyun-5" src="/Kitap/icon/link2.png" style="width: 38px" /></a>
+<!-- &ensp; <a href="https://facebook.com/okuyun5"  target="Kuran"><img alt="https://facebook.com/okuyun5" src="/Kitap/icon/facebook.png" style="width: 36px" /></a> -->
+&ensp;
+<a href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd"  target="Kuran"><img alt="https://youtube.com/" src="/Kitap/icon/youtube.png" style="width: 38px" /></a>
+&ensp;
+<a href="https://github.com/Okuyun/Kitap"  target="Kuran"><img alt="https://github.com/Okuyun/Kitap"" src="/Kitap/icon/github.webp" style="width: 40px" /></a>
 </p>
-
-<h3>Muhteva (içerik):</h3>
-<p>&ensp;
-<a href="https://youtube.com/playlist?list=PLBDiqooDrruv0MDNyRbG-JBLH2CnfNxAd"  target="Kuran">
-<img alt="https://youtube.com/" src="/Kitap/icon/youtube.png" style="width: 38px" />
-</a>&ensp;
-<a href="https://github.com/Okuyun/Kitap"  target="Kuran">
-<img alt="" src="/Kitap/icon/github.webp" style="width: 40px" />
-</a>
-</p>
-<br><br>
-
+<br>
   </body>
 </html>
